Blender crash in UV-editor #44801

Closed
opened 2015-05-22 02:29:26 +02:00 by john morecoffee · 4 comments

System Information
Intel Quadcore, Win7 64, GeForce GTS450

Blender Version
Broken: buildbot 9bfea76
Worked: buildbot 05c4c24

Short description of error
ALT + right mouse click while in uv-editmode instantly crashes blender

Exact steps for others to reproduce the error

  • load factory settings
  • unwrap cube
  • split view, select uv-editor
  • ALT + right mouse click
**System Information** Intel Quadcore, Win7 64, GeForce GTS450 **Blender Version** Broken: buildbot 9bfea76 Worked: buildbot 05c4c24 **Short description of error** ALT + right mouse click while in uv-editmode instantly crashes blender **Exact steps for others to reproduce the error** - load factory settings - unwrap cube - split view, select uv-editor - ALT + right mouse click

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @morecoffee

Added subscriber: @morecoffee
Bastien Montagne self-assigned this 2015-05-22 10:17:37 +02:00

This issue was referenced by be6479c9ea

This issue was referenced by be6479c9ea5d36451e552ceb10d2106d9a5d6856

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44801
No description provided.