Fix T44801: Blender crash in UV-editor.

Mistake in cleanup rB30b45d55... Odd compiler did not yell at that. :|